# Typher

./: .gitignore  CMakeLists.txt  README.md  build.py  build.sh
examples/: image_processing.cpp
include/Gpu/: OpenCL.hpp
include/Inference/: Engine.hpp  Onnx.hpp  Tensorflow.hpp
include/MLEngine/: MLEngine.hpp
include/Utils/: file_ops.hpp  logger.hpp  string_ops.hpp
include/Utils/Logger/: logger.hpp
include/gpu/: OpenCL.hpp
kernels/: softmax.cl
kernels/cl/: softmax.cl
src/: main.cpp
src/Gpu/: OpenCL.cpp
src/Inference/: Onnx.cpp  Tensorflow.cpp
src/MLEngine/: MLEngine.cpp
src/Utils/: file_ops.cpp  logger.cpp  string_ops.cpp
src/Utils/Logger/: logger.cpp
src/gpu/: OpenCL.cpp
